--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "promise-worker": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.20.6",
+    "react-redux": "^7.2.4",
+    "redux-undo": "^1.0.1",
     "sagiri": "^3.1.1",
     "urlencode": "^1.1.0"
   },
