--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "typescript": "^4.3.5"
   }
 }
